force-app/main/default/objects/CRMG_WF__Time_Trigger__c/CRMG_WF__Time_Trigger__c.object-meta.xml
<CustomObject>
    <label>Time Trigger</label>
    <nameField>
        <displayFormat>RC-{0000000}</displayFormat>
        <label>Time Trigger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Trigger</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>