force-app/main/default/objects/CRMG_WF__Time_Trigger__c/fields/CRMG_WF__After_Before__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__After_Before__c</fullName>
    <label>After/Before</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>After</fullName>
                <default>true</default>
                <label>After</label>
            </value>
            <value>
                <fullName>Before</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>