force-app/main/default/objects/CRMG_WF__Time_Trigger__c/fields/CRMG_WF__DateField__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__DateField__c</fullName>
    <label>Date Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>