force-app/main/default/objects/CRMG_WF__Time_Trigger__c/fields/CRMG_WF__Days_Hours__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Days_Hours__c</fullName>
    <label>Days/Hours</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
                <default>true</default>
                <label>Days</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>