force-app/main/default/objects/CRMG_WF__Time_Trigger__c/fields/CRMG_WF__Is_Rule_Trigger_Date__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Is_Rule_Trigger_Date__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Rule Trigger Date</label>
    <type>Checkbox</type>
</CustomField>