force-app/main/default/objects/CRMG_WF__Time_Trigger__c/fields/CRMG_WF__IsImmediate__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__IsImmediate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsImmediate</label>
    <type>Checkbox</type>
</CustomField>