force-app/main/default/objects/CRMG_WF__Time_Trigger__c/fields/CRMG_WF__Number__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Number__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>